--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "drlpy"
+name = "delayed_reactant_labeling"
 version = "0.0.2"
 authors = [
     {name="Martijn Dingemans", email="Martijn.Dingemans@ru.nl"},
