--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,5 @@ pyproject.toml
 /src/delayed_reactant_labeling.egg-info/
 /docs/build/
 /dist/
-/venv311/
-/venv38/
 /examples/optimization/
+/example_server/optimize/
