--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,3 +1,12 @@
 sphinx==7.1.2
 sphinx-copybutton==0.5.2
 sphinx-rtd-theme==1.3.0
+numpy
+scipy
+matplotlib
+scikit-learn
+numba
+tqdm
+openpyxl
+pandas
+joblib
